# Gazebo_Welt_mit_LIO_SAM

./: CLAUDE.md  README.md  package.xml  setup.py
autonomous_driving/: gazebo_odom_tf.py  imu_world_orientation_relay.py  ouster_timestamp_relay.py
config/: gazebo_gui.config  params_sim.yaml  robot_sim.urdf.xacro  rviz2_sim_Aeris.rviz
launch/: sim_Aeris.launch.py
models/prius_hybrid/: model.sdf
models/sonoma_raceway/: model.sdf
worlds/: Sonoma_world.sdf
